# htt-models

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  run.py  test.py
.github/workflows/: wf.yml
httmodels/: __init__.py  config.py  main.py  script.py
httmodels/dataloaders/: __init__.py  landmarkstransformers.py  loaders.py
httmodels/dataprocessors/: abstract.py
httmodels/dataprocessors/cnn/: aslhands.py  mnist.py
httmodels/dataprocessors/randomforest/: aslhands.py
httmodels/datasets/: __init__.py  aslhands.py  datasets.py  mnist.py  mnist_asl.py
httmodels/examples/: __init__.py  dataloaders_example.py  updated_trainers_example.py
httmodels/models/: __init__.py  adaboost.py  base.py  lenet.py  random_forest.py  resnet.py
httmodels/newcnn/: cnn.py  preprocess.py
httmodels/preprocessing/: __init__.py  aslhands.py  base.py  mnist.py
httmodels/trainers/: __init__.py  abstract.py  adaboost.py  base.py  context.py  lenet.py  resnet.py  rf.py
httmodels/trainers/adabooster/: train.py
httmodels/trainers/cnn/: train.py
httmodels/trainers/randomforest/: train.py
httmodels/unstrctured/dataprocessors/cnn/: aslhands.py
httmodels/unstrctured/newcnn/: cnn.py
httmodels/unstrctured/scripts/: preprocess.py
httmodels/utils/: __init__.py  common.py
models/: ada.pickle  cnn.pth  cnn_mnist_model.pth  cnn_v2.pth  cnnasl.pth
signlangclassification/randomforest/process/: mnist.py
signlangclassification/randomforest/train/: train.py
tests/: run.py
