
[tool.poetry]
package-mode = true
name = "httmodels"
version = "0.0.0.post8.dev0+9874b54"
authors = ["Popis <piotrpopis98@icloud.com>"]
description = "Package for training models and processing images"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
numpy = "2.1.1"
scikit-learn = "^1.7.0"
pandas = "^2.3.0"
torch = "~2.5.1"
opencv-python = "^4.11.0.86"
pydantic = "^2.11.5"
pydantic-settings = "^2.9.1"
mediapipe = "0.10.14"
torchvision = "~0.20.1"
torchviz = "^0.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = false
pattern = '^v?((?P<epoch>\d+)!)?(?P<base>\d+(\.\d+)*)'

[tool.pytest.ini_options]
addopts = "--cov --cov-report xml --cov-report html --cov-report term-missing --junit-xml py-junit.xml"

[tool.coverage.run]
source = ["src"]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 98
per-file-ignores = "__init__.py:F401"
ignore = ["E501", "E203"]

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["black"]

[tool.bandit]
skips = ["B403", "B301"]
